--- a/copypage1/style.sass
+++ b/copypage1/style.sass
@@ -7,6 +7,7 @@ $color_primary_light: #59599c
 $color_text: #FFFFFF
 $family-header: "Preahvihear", sans-serif
 $family-article: "Open Sans", sans-serif
+$range__content-tiny: 960px
 
 body
     margin: 0
@@ -18,6 +19,8 @@ header
     overflow: hidden
     font-family: $family-header
     font-size: 15px
+
+
 
 .wrapper
     display: flex
@@ -46,7 +49,7 @@ header
     li
         margin-left: 50px
 
-right
+.right
     li
         &:hover
             color: gray !important
@@ -74,25 +77,32 @@ right
 #slogan
     margin-top: -5px
     color: gray
+    
+.hide-on-tiny
+    @media screen and (max-width: $range__content-tiny)
+        display: none !important
 
-#slogan
-    &::before
-        content: "~ "
-#slogan
-    &::after
-        content: " ~"
+
+        
 
 section
     display: grid !important
     grid-template-columns: 12% auto 12% !important 
     font-family: $family-article 
+        
 
-.main-content
+.middle
+    display: flex
     min-height: 100%
     color: black
+    font-size: 16px
     background-color: white
     border-left: 8px solid $color_primary_dark
     border-right: 8px solid $color_primary_dark
+    @media screen and (max-width: $range__content-tiny)
+        border-left: 2px solid black
+        border-right: 2px solid black
+        
 
 #left-side,
 #right-side
@@ -117,4 +127,20 @@ section
         color: $color_text   
 
 
-    
+#sub-header
+    color: #c0c95d  
+
+#decorator-purple
+    text-decoration-color: blue
+    text-decoration: underline
+
+.breadcrumbs
+    margin: auto
+    margin-top: 50px
+    width: auto
+    float: right
+
+.main-content 
+    width: 75%
+
+    @media screen and (max-width: $range__content-tiny)
